--- a/src/components/Gallery.astro
+++ b/src/components/Gallery.astro
@@ -8,11 +8,32 @@ import {
   CardHeader,
   CardTitle,
 } from '@/components/ui/card'
-import RealLove from '@/assets/real-love-martingarrix-lloyiso.jpg'
+
+import image_1 from '@/assets/gallery/image_1.jpg'
+import image_2 from '@/assets/gallery/image_2.jpg'
+import image_3 from '@/assets/gallery/image_3.jpg'
+import image_4 from '@/assets/gallery/image_4.jpg'
+import image_5 from '@/assets/gallery/image_5.jpg'
+import image_6 from '@/assets/gallery/image_6.jpg'
+import image_7 from '@/assets/gallery/image_7.jpg'
+import image_8 from '@/assets/gallery/image_8.jpg'
+import image_9 from '@/assets/gallery/image_9.jpg'
+import image_10 from '@/assets/gallery/image_10.jpg'
+import image_11 from '@/assets/gallery/image_11.jpg'
+import image_12 from '@/assets/gallery/image_12.jpg'
+import image_13 from '@/assets/gallery/image_13.jpg'
+import image_14 from '@/assets/gallery/image_14.jpg'
+import image_15 from '@/assets/gallery/image_15.jpg'
+import image_16 from '@/assets/gallery/image_16.jpg'
+import image_17 from '@/assets/gallery/image_17.jpg'
+import image_18 from '@/assets/gallery/image_18.jpg'
+import image_19 from '@/assets/gallery/image_19.jpg'
+import image_20 from '@/assets/gallery/image_20.jpg'
+import image_21 from '@/assets/gallery/image_21.jpg'
 ---
 
 <Card
-  className="group flex h-full flex-col justify-between p-8 md:grid md:grid-cols-2 md:items-center md:gap-12 lg:col-span-2 lg:col-start-2 lg:row-span-2 lg:row-start-2 lg:grid-cols-none lg:gap-0"
+  className="flex h-full flex-col justify-between p-2 md:grid md:grid-cols-2 md:items-center md:gap-12 lg:col-span-2 lg:col-start-2 lg:row-span-2 lg:row-start-2 lg:grid-cols-none lg:gap-0"
 >
   <CardHeader>
     <CardTitle className="font-medium tracking-tight text-primary md:text-6xl">
@@ -22,72 +43,107 @@ import RealLove from '@/assets/real-love-martingarrix-lloyiso.jpg'
       Living life to the fullest!
     </CardDescription>
   </CardHeader>
-  <CardContent className="pt-8">
-    <div
-      class="z-[1] w-1/2 origin-center rotate-[4deg] transform overflow-hidden rounded-2xl bg-white p-2"
-    >
-      <Image
-        alt="Image 0"
-        width="679"
-        height="458"
-        class="rounded-md"
-        src={RealLove}
-      />
-    </div>
-    <div
-      class="z-[2] w-1/2 origin-center rotate-3 overflow-hidden rounded-2xl bg-white p-2"
-    >
-      <Image
-        alt="Image 1"
-        width="679"
-        height="458"
-        class="rounded-md"
-        src={RealLove}
-      />
-    </div>
-    <div
-      class="z-[2] w-1/2 origin-center rotate-6 overflow-hidden rounded-2xl bg-white p-2"
-    >
-      <Image
-        alt="Image 2"
-        width="559"
-        height="379"
-        class="rounded-md"
-        src={RealLove}
-      />
-    </div>
-    <div
-      class="z-[2] w-1/2 origin-center -rotate-3 overflow-hidden rounded-2xl bg-white p-2"
-    >
-      <Image
-        alt="Image 3"
-        width="559"
-        height="379"
-        class="rounded-md"
-        src={RealLove}
-      />
-    </div>
-    <div
-      class="z-[1] w-1/2 origin-center -rotate-1 overflow-hidden rounded-2xl bg-white p-2"
-    >
-      <Image
-        alt="Image 4"
-        width="455"
-        height="308"
-        class="rounded-md"
-        src={RealLove}
-      />
-    </div>
-    <div
-      class="z-[1] w-1/2 origin-center rotate-6 overflow-hidden rounded-2xl bg-white p-2"
-    >
-      <Image
-        alt="Image 5"
-        width="455"
-        height="308"
-        class="rounded-md"
-        src={RealLove}
-      />
-    </div>
+  <CardContent className="columns-1 gap-2 pt-0 md:columns-2">
+    <Image class="h-auto max-w-full rounded-lg" src={image_1} alt="Image 1" />
+    <Image
+      class="mt-2 h-auto max-w-full rounded-lg"
+      src={image_2}
+      alt="Image 2"
+    />
+    <Image
+      class="mt-2 h-auto max-w-full rounded-lg"
+      src={image_3}
+      alt="Image 3"
+    />
+    <Image
+      class="mt-2 h-auto max-w-full rounded-lg"
+      src={image_4}
+      alt="Image 4"
+    />
+    <Image
+      class="mt-2 h-auto max-w-full rounded-lg"
+      src={image_5}
+      alt="Image 5"
+    />
+    <Image
+      class="mt-2 h-auto max-w-full rounded-lg"
+      src={image_6}
+      alt="Image 6"
+    />
+    <Image
+      class="mt-2 h-auto max-w-full rounded-lg"
+      src={image_7}
+      alt="Image 7"
+    />
+    <Image
+      class="mt-2 h-auto max-w-full rounded-lg"
+      src={image_8}
+      alt="Image 8"
+    />
+    <Image
+      class="mt-2 h-auto max-w-full rounded-lg"
+      src={image_9}
+      alt="Image 9"
+    />
+    <Image
+      class="mt-2 h-auto max-w-full rounded-lg"
+      src={image_10}
+      alt="Image 10"
+    />
+    <Image
+      class="mt-2 h-auto max-w-full rounded-lg"
+      src={image_11}
+      alt="Image 11"
+    />
+    <Image
+      class="mt-2 h-auto max-w-full rounded-lg"
+      src={image_12}
+      alt="Image 12"
+    />
+    <Image
+      class="mt-2 h-auto max-w-full rounded-lg"
+      src={image_13}
+      alt="Image 13"
+    />
+    <Image
+      class="mt-2 h-auto max-w-full rounded-lg"
+      src={image_14}
+      alt="Image 14"
+    />
+    <Image
+      class="mt-2 h-auto max-w-full rounded-lg"
+      src={image_15}
+      alt="Image 15"
+    />
+    <Image
+      class="mt-2 h-auto max-w-full rounded-lg"
+      src={image_16}
+      alt="Image 16"
+    />
+    <Image
+      class="mt-2 h-auto max-w-full rounded-lg"
+      src={image_17}
+      alt="Image 17"
+    />
+    <Image
+      class="mt-2 h-auto max-w-full rounded-lg"
+      src={image_18}
+      alt="Image 18"
+    />
+    <Image
+      class="mt-2 h-auto max-w-full rounded-lg"
+      src={image_19}
+      alt="Image 19"
+    />
+    <Image
+      class="mt-2 h-auto max-w-full rounded-lg"
+      src={image_20}
+      alt="Image 20"
+    />
+    <Image
+      class="mt-2 h-auto max-w-full rounded-lg"
+      src={image_21}
+      alt="Image 21"
+    />
   </CardContent>
 </Card>
