--- a/src/components/Playing.astro
+++ b/src/components/Playing.astro
@@ -17,7 +17,9 @@ import {
     <CardTitle className="text-xl tracking-tight text-primary lg:text-7xl">
       Playing
     </CardTitle>
-    <CardDescription className="mt-4 text-sm"> Let's go. </CardDescription>
+    <CardDescription className="mt-4 text-sm">
+      I'm only human but I could feel like, this could be real love!
+    </CardDescription>
   </CardHeader>
   <CardContent className="sm:pt-8">
     <iframe
