--- a/src/components/Gallery.astro
+++ b/src/components/Gallery.astro
@@ -40,7 +40,7 @@ import image_21 from '@/assets/gallery/image_21.jpg'
       Gallery
     </CardTitle>
     <CardDescription className="mt-4 text-sm">
-      Living life to the fullest!
+      One day, you'll leave this world behind so live a life you will remember.
     </CardDescription>
   </CardHeader>
   <CardContent className="columns-1 gap-2 pt-0 md:columns-2">
