--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -1,5 +1,5 @@
 ---
-import { Image } from '@unpic/astro'
+import { Image } from 'astro:assets'
 
 import { Card, CardContent, CardHeader } from '@/components/ui/card'
 
