--- a/src/components/Gallery.astro
+++ b/src/components/Gallery.astro
@@ -1,5 +1,5 @@
 ---
-import { Image } from '@unpic/astro'
+import { Image } from 'astro:assets'
 
 import {
   Card,
@@ -10,23 +10,16 @@ import {
 } from '@/components/ui/card'
 
 import image_1 from '@/assets/gallery/image_1.jpg'
-import image_2 from '@/assets/gallery/image_2.jpg'
 import image_3 from '@/assets/gallery/image_3.jpg'
-import image_4 from '@/assets/gallery/image_4.jpg'
-import image_5 from '@/assets/gallery/image_5.jpg'
 import image_6 from '@/assets/gallery/image_6.jpg'
 import image_7 from '@/assets/gallery/image_7.jpg'
 import image_8 from '@/assets/gallery/image_8.jpg'
-import image_9 from '@/assets/gallery/image_9.jpg'
 import image_10 from '@/assets/gallery/image_10.jpg'
-import image_11 from '@/assets/gallery/image_11.jpg'
-import image_12 from '@/assets/gallery/image_12.jpg'
 import image_13 from '@/assets/gallery/image_13.jpg'
 import image_14 from '@/assets/gallery/image_14.jpg'
 import image_15 from '@/assets/gallery/image_15.jpg'
 import image_16 from '@/assets/gallery/image_16.jpg'
 import image_17 from '@/assets/gallery/image_17.jpg'
-import image_18 from '@/assets/gallery/image_18.jpg'
 import image_19 from '@/assets/gallery/image_19.jpg'
 import image_20 from '@/assets/gallery/image_20.jpg'
 import image_21 from '@/assets/gallery/image_21.jpg'
@@ -47,23 +40,8 @@ import image_21 from '@/assets/gallery/image_21.jpg'
     <Image class="h-auto max-w-full rounded-lg" src={image_1} alt="Image 1" />
     <Image
       class="mt-2 h-auto max-w-full rounded-lg"
-      src={image_2}
-      alt="Image 2"
-    />
-    <Image
-      class="mt-2 h-auto max-w-full rounded-lg"
       src={image_3}
       alt="Image 3"
-    />
-    <Image
-      class="mt-2 h-auto max-w-full rounded-lg"
-      src={image_4}
-      alt="Image 4"
-    />
-    <Image
-      class="mt-2 h-auto max-w-full rounded-lg"
-      src={image_5}
-      alt="Image 5"
     />
     <Image
       class="mt-2 h-auto max-w-full rounded-lg"
@@ -82,23 +60,8 @@ import image_21 from '@/assets/gallery/image_21.jpg'
     />
     <Image
       class="mt-2 h-auto max-w-full rounded-lg"
-      src={image_9}
-      alt="Image 9"
-    />
-    <Image
-      class="mt-2 h-auto max-w-full rounded-lg"
       src={image_10}
       alt="Image 10"
-    />
-    <Image
-      class="mt-2 h-auto max-w-full rounded-lg"
-      src={image_11}
-      alt="Image 11"
-    />
-    <Image
-      class="mt-2 h-auto max-w-full rounded-lg"
-      src={image_12}
-      alt="Image 12"
     />
     <Image
       class="mt-2 h-auto max-w-full rounded-lg"
@@ -124,11 +87,6 @@ import image_21 from '@/assets/gallery/image_21.jpg'
       class="mt-2 h-auto max-w-full rounded-lg"
       src={image_17}
       alt="Image 17"
-    />
-    <Image
-      class="mt-2 h-auto max-w-full rounded-lg"
-      src={image_18}
-      alt="Image 18"
     />
     <Image
       class="mt-2 h-auto max-w-full rounded-lg"
