--- a/src/components/Gallery.astro
+++ b/src/components/Gallery.astro
@@ -37,71 +37,55 @@ import image_21 from '@/assets/gallery/image_21.jpg'
     </CardDescription>
   </CardHeader>
   <CardContent className="columns-1 gap-2 pt-0 md:columns-2">
-    <Image class="h-auto max-w-full rounded-lg" src={image_1} alt="Image 1" />
-    <Image
-      class="mt-2 h-auto max-w-full rounded-lg"
-      src={image_3}
-      alt="Image 3"
-    />
-    <Image
-      class="mt-2 h-auto max-w-full rounded-lg"
-      src={image_6}
-      alt="Image 6"
-    />
-    <Image
-      class="mt-2 h-auto max-w-full rounded-lg"
-      src={image_7}
-      alt="Image 7"
-    />
-    <Image
-      class="mt-2 h-auto max-w-full rounded-lg"
-      src={image_8}
-      alt="Image 8"
-    />
+    <Image class="h-auto max-w-full rounded-lg" src={image_1} alt="Me 1" />
+    <Image class="mt-2 h-auto max-w-full rounded-lg" src={image_3} alt="Me 3" />
+    <Image class="mt-2 h-auto max-w-full rounded-lg" src={image_6} alt="Me 6" />
+    <Image class="mt-2 h-auto max-w-full rounded-lg" src={image_7} alt="Me 7" />
+    <Image class="mt-2 h-auto max-w-full rounded-lg" src={image_8} alt="Me 8" />
     <Image
       class="mt-2 h-auto max-w-full rounded-lg"
       src={image_10}
-      alt="Image 10"
+      alt="Me 10"
     />
     <Image
       class="mt-2 h-auto max-w-full rounded-lg"
       src={image_13}
-      alt="Image 13"
+      alt="Me 13"
     />
     <Image
       class="mt-2 h-auto max-w-full rounded-lg"
       src={image_14}
-      alt="Image 14"
+      alt="Me 14"
     />
     <Image
       class="mt-2 h-auto max-w-full rounded-lg"
       src={image_15}
-      alt="Image 15"
+      alt="Me 15"
     />
     <Image
       class="mt-2 h-auto max-w-full rounded-lg"
       src={image_16}
-      alt="Image 16"
+      alt="Me 16"
     />
     <Image
       class="mt-2 h-auto max-w-full rounded-lg"
       src={image_17}
-      alt="Image 17"
+      alt="Me 17"
     />
     <Image
       class="mt-2 h-auto max-w-full rounded-lg"
       src={image_19}
-      alt="Image 19"
+      alt="Me 19"
     />
     <Image
       class="mt-2 h-auto max-w-full rounded-lg"
       src={image_20}
-      alt="Image 20"
+      alt="Me 20"
     />
     <Image
       class="mt-2 h-auto max-w-full rounded-lg"
       src={image_21}
-      alt="Image 21"
+      alt="Me 21"
     />
   </CardContent>
 </Card>
