--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -11,9 +11,8 @@ import Avatar from '@/assets/avatar.jpg'
     <div class="relative flex items-center gap-x-4">
       <Image
         src={Avatar}
-        height={48}
         alt="My name is Long Nhat Nguyen"
-        class="rounded-full"
+        class="size-12 rounded-full"
       />
       <p class="text-sm font-semibold leading-6 text-primary">
         Long Nhat Nguyen
