--- a/src/components/Gallery.astro
+++ b/src/components/Gallery.astro
@@ -10,19 +10,17 @@ import {
 } from '@/components/ui/card'
 
 import image_1 from '@/assets/gallery/image_1.jpg'
+import image_2 from '@/assets/gallery/image_2.jpg'
 import image_3 from '@/assets/gallery/image_3.jpg'
+import image_4 from '@/assets/gallery/image_4.jpg'
+import image_5 from '@/assets/gallery/image_5.jpg'
 import image_6 from '@/assets/gallery/image_6.jpg'
 import image_7 from '@/assets/gallery/image_7.jpg'
 import image_8 from '@/assets/gallery/image_8.jpg'
+import image_9 from '@/assets/gallery/image_9.jpg'
 import image_10 from '@/assets/gallery/image_10.jpg'
-import image_13 from '@/assets/gallery/image_13.jpg'
-import image_14 from '@/assets/gallery/image_14.jpg'
-import image_15 from '@/assets/gallery/image_15.jpg'
-import image_16 from '@/assets/gallery/image_16.jpg'
-import image_17 from '@/assets/gallery/image_17.jpg'
-import image_19 from '@/assets/gallery/image_19.jpg'
-import image_20 from '@/assets/gallery/image_20.jpg'
-import image_21 from '@/assets/gallery/image_21.jpg'
+import image_11 from '@/assets/gallery/image_11.jpg'
+import image_12 from '@/assets/gallery/image_12.jpg'
 ---
 
 <Card
@@ -36,56 +34,30 @@ import image_21 from '@/assets/gallery/image_21.jpg'
       One day, you'll leave this world behind so live a life you will remember.
     </CardDescription>
   </CardHeader>
-  <CardContent className="columns-1 gap-2 pt-0 md:columns-2">
+  <CardContent className="columns-1 gap-4 pt-0 md:columns-2">
     <Image class="h-auto max-w-full rounded-lg" src={image_1} alt="Me 1" />
-    <Image class="mt-2 h-auto max-w-full rounded-lg" src={image_3} alt="Me 3" />
-    <Image class="mt-2 h-auto max-w-full rounded-lg" src={image_6} alt="Me 6" />
-    <Image class="mt-2 h-auto max-w-full rounded-lg" src={image_7} alt="Me 7" />
-    <Image class="mt-2 h-auto max-w-full rounded-lg" src={image_8} alt="Me 8" />
+    <Image class="mt-4 h-auto max-w-full rounded-lg" src={image_2} alt="Me 2" />
+    <Image class="mt-4 h-auto max-w-full rounded-lg" src={image_3} alt="Me 3" />
+    <Image class="mt-4 h-auto max-w-full rounded-lg" src={image_4} alt="Me 4" />
+    <Image class="mt-4 h-auto max-w-full rounded-lg" src={image_5} alt="Me 5" />
+    <Image class="mt-4 h-auto max-w-full rounded-lg" src={image_6} alt="Me 6" />
+    <Image class="mt-4 h-auto max-w-full rounded-lg" src={image_7} alt="Me 7" />
+    <Image class="mt-4 h-auto max-w-full rounded-lg" src={image_8} alt="Me 8" />
+    <Image class="mt-4 h-auto max-w-full rounded-lg" src={image_9} alt="Me 9" />
     <Image
-      class="mt-2 h-auto max-w-full rounded-lg"
+      class="mt-4 h-auto max-w-full rounded-lg"
       src={image_10}
       alt="Me 10"
     />
     <Image
-      class="mt-2 h-auto max-w-full rounded-lg"
-      src={image_13}
-      alt="Me 13"
+      class="mt-4 h-auto max-w-full rounded-lg"
+      src={image_11}
+      alt="Me 11"
     />
     <Image
-      class="mt-2 h-auto max-w-full rounded-lg"
-      src={image_14}
-      alt="Me 14"
-    />
-    <Image
-      class="mt-2 h-auto max-w-full rounded-lg"
-      src={image_15}
-      alt="Me 15"
-    />
-    <Image
-      class="mt-2 h-auto max-w-full rounded-lg"
-      src={image_16}
-      alt="Me 16"
-    />
-    <Image
-      class="mt-2 h-auto max-w-full rounded-lg"
-      src={image_17}
-      alt="Me 17"
-    />
-    <Image
-      class="mt-2 h-auto max-w-full rounded-lg"
-      src={image_19}
-      alt="Me 19"
-    />
-    <Image
-      class="mt-2 h-auto max-w-full rounded-lg"
-      src={image_20}
-      alt="Me 20"
-    />
-    <Image
-      class="mt-2 h-auto max-w-full rounded-lg"
-      src={image_21}
-      alt="Me 21"
+      class="mt-4 h-auto max-w-full rounded-lg"
+      src={image_12}
+      alt="Me 12"
     />
   </CardContent>
 </Card>
