--- a/src/components/Gallery.astro
+++ b/src/components/Gallery.astro
@@ -34,7 +34,7 @@ import image_12 from '@/assets/gallery/image_12.jpg'
       One day, you'll leave this world behind so live a life you will remember.
     </CardDescription>
   </CardHeader>
-  <CardContent className="columns-1 gap-4 pt-0 md:columns-2">
+  <CardContent className="columns-1 gap-4 md:columns-2">
     <Image class="h-auto max-w-full rounded-lg" src={image_1} alt="Me 1" />
     <Image class="mt-4 h-auto max-w-full rounded-lg" src={image_2} alt="Me 2" />
     <Image class="mt-4 h-auto max-w-full rounded-lg" src={image_3} alt="Me 3" />
