--- a/src/components/Lyrics.astro
+++ b/src/components/Lyrics.astro
@@ -10,5 +10,9 @@ import { Card, CardContent, CardHeader, CardTitle } from '@/components/ui/card'
     <br />
     <br />
     Life gets better, we're together and one day we'll smile looking down from above.
+    <br />
+    <br />
+    I guess we'll never know when our time will come but if we'll ever be remembered
+    I know it'll be for the way that we love.
   </CardContent>
 </Card>
