--- a/src/components/Playing.astro
+++ b/src/components/Playing.astro
@@ -9,7 +9,7 @@ import {
 ---
 
 <Card
-  className="items-center justify-between overflow-hidden p-2 text-center lg:text-left"
+  className="h-full items-center justify-between overflow-hidden p-2 text-center lg:text-left"
 >
   <CardHeader>
     <CardTitle className="text-xl tracking-tight text-primary lg:text-7xl">
@@ -19,7 +19,7 @@ import {
       I'm only human but I could feel like, this could be real love!
     </CardDescription>
   </CardHeader>
-  <CardContent className="sm:pt-8">
+  <CardContent>
     <iframe
       title="Spotify"
       class="h-96 rounded-xl sm:h-lvh"
