--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,40 +1,13 @@
 ---
 const currentYear = new Date().getFullYear()
+
+import { Card, CardFooter } from '@/components/ui/card'
 ---
 
-<footer class="mt-16 flex-none">
-  <div class="sm:px-8">
-    <div class="mx-auto max-w-7xl lg:px-8">
-      <div class="border-t py-8">
-        <div class="relative px-4 sm:px-8 lg:px-12">
-          <div class="mx-auto max-w-2xl lg:max-w-5xl">
-            <div
-              class="flex flex-col items-center justify-between gap-6 sm:flex-row"
-            >
-              <a aria-label="Back to Home" href="/">
-                <div class="flex flex-row gap-0 fill-foreground">
-                  <svg width="32" height="32" viewBox="0 0 1000 1000">
-                    <g transform="matrix(44.5 0 0 44.5 500 500)">
-                      <path transform="translate(-12, -11.5)" d="M1 21h22L12 2"
-                      ></path>
-                    </g>
-                  </svg>
-                  <svg width="32" height="32" viewBox="0 0 1000 1000">
-                    <g transform="matrix(42.5 0 0 42.5 500 500)">
-                      <path
-                        transform="translate(-12, -12)"
-                        d="M15 2.013H9V9H2v6h7v6.987h6V15h7V9h-7z"></path>
-                    </g>
-                  </svg>
-                </div>
-              </a>
-              <p class="text-center text-sm leading-loose">
-                &copy; {currentYear} Long Nhat Nguyen
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</footer>
+<Card
+  className="flex h-full flex-col justify-end p-8 lg:col-span-2 lg:row-span-2 xl:col-span-1"
+>
+  <CardFooter className="mt-4 text-primary">
+    &copy; {currentYear} Long Nhat Nguyen
+  </CardFooter>
+</Card>
