--- a/src/components/Playing.astro
+++ b/src/components/Playing.astro
@@ -23,7 +23,7 @@ import {
     <iframe
       title="Spotify"
       class="h-96 rounded-xl sm:h-lvh"
-      src="https://open.spotify.com/embed/album/45gsxfnJ5Nt2RZp82SQenc?utm_source=generator&theme=0"
+      src="https://open.spotify.com/embed/playlist/5hZEhopBE0tW3gL6yFBeGr?utm_source=generator"
       width="100%"
       allowfullscreen=""
       allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
