--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -12,7 +12,7 @@ interface Props {
 const { title, description, ogImage } = Astro.props
 ---
 
-<html lang="en">
+<html lang="en" class="dark">
   <head>
     <HeadSEO title={title} description={description} ogImage={ogImage} />
     <ThemeProvider />
