--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -1,7 +1,7 @@
 ---
 import { siteConfig } from '@/config'
 
-import { Mail } from 'lucide-react'
+import { EnvelopeClosedIcon } from '@radix-ui/react-icons'
 
 import { Button } from '@/components/ui/button'
 
@@ -26,7 +26,7 @@ import { Card, CardContent, CardHeader, CardTitle } from '@/components/ui/card'
       href={`mailto:${siteConfig.links.email}`}
     >
       <Button>
-        <Mail className="mr-2 size-4" />Email
+        <EnvelopeClosedIcon className="mr-2 size-4" />Email
       </Button>
     </a>
   </CardContent>
