--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,7 @@
 import BaseLayout from '@/layouts/BaseLayout.astro'
 import About from '@/components/About.astro'
 import FindMe from '@/components/FindMe.astro'
-import Gallery from '@/components/Gallery.astro'
+import Gallery from '@/components/Gallery'
 import Playing from '@/components/Playing.astro'
 import LogoCard from '@/components/LogoCard.astro'
 import Projects from '@/components/Projects.astro'
@@ -20,7 +20,7 @@ import { siteConfig } from '@/config'
     >
       <About />
       <FindMe />
-      <Gallery />
+      <Gallery client:idle />
       <Playing />
       <LogoCard />
       <Projects />
