--- a/src/components/Gallery.astro
+++ b/src/components/Gallery.astro
@@ -1,7 +1,4 @@
 ---
-import type { ImageMetadata } from 'astro'
-import { Image, getImage } from 'astro:assets'
-
 import {
   Card,
   CardContent,
@@ -9,7 +6,11 @@ import {
   CardHeader,
   CardTitle,
 } from '@/components/ui/card'
+
 import { Dialog, DialogContent, DialogTrigger } from '@/components/ui/dialog'
+
+import type { ImageMetadata } from 'astro'
+import { Image } from 'astro:assets'
 
 const images = import.meta.glob<{ default: ImageMetadata }>(
   '/src/assets/gallery/*',
@@ -20,37 +21,26 @@ const imagePaths = Object.keys(images).filter((imagePath) => {
 ---
 
 <Card
-  class="flex h-full flex-col justify-between p-2 md:grid md:grid-cols-2 md:items-center md:gap-12 lg:col-span-2 lg:col-start-2 lg:row-span-2 lg:row-start-2 lg:grid-cols-none lg:gap-0"
+  className="flex h-full flex-col justify-between p-2 md:grid md:grid-cols-2 md:items-center md:gap-12 lg:col-span-2 lg:col-start-2 lg:row-span-2 lg:row-start-2 lg:grid-cols-none lg:gap-0"
 >
   <CardHeader>
-    <CardTitle class="font-medium tracking-tight text-primary md:text-6xl"
-      >Gallery</CardTitle
-    >
-    <CardDescription class="mt-4 text-sm">
-      One day, you'll leave this world behind, so live a life you will remember.
+    <CardTitle className="font-medium tracking-tight text-primary md:text-6xl">
+      Gallery
+    </CardTitle>
+    <CardDescription className="mt-4 text-sm">
+      One day, you'll leave this world behind so live a life you will remember.
     </CardDescription>
   </CardHeader>
-  <CardContent class="columns-1 gap-4 md:columns-2">
+  <CardContent className="columns-1 gap-4 md:columns-2">
     {
       imagePaths.map(async (imagePath) => {
-        let image = images[imagePath]()
+        const image = images[imagePath]()
         return (
-          <Dialog>
-            <DialogTrigger asChild>
-              <Image
-                class="mt-4 h-auto max-w-full cursor-pointer rounded-lg"
-                src={image}
-                alt="altText"
-              />
-            </DialogTrigger>
-            <DialogContent class="rounded-lg p-0">
-              <Image
-                class="rounded-lg object-contain"
-                src={image}
-                alt="altText"
-              />
-            </DialogContent>
-          </Dialog>
+          <Image
+            class="mt-4 h-auto max-w-full rounded-lg"
+            src={image}
+            alt="Me"
+          />
         )
       })
     }
