--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -6,7 +6,7 @@ import { Card, CardContent, CardHeader } from '@/components/ui/card'
 import Avatar from '@/assets/avatar.jpg'
 ---
 
-<Card className="p-8 lg:row-span-2">
+<Card className="p-8">
   <CardHeader>
     <div class="relative flex items-center gap-x-4">
       <Image
