--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -9,7 +9,7 @@ import { Card, CardContent, CardHeader, CardTitle } from '@/components/ui/card'
 ---
 
 <Card
-  className="relative flex h-full flex-col items-center justify-center overflow-hidden p-8 lg:col-span-2 lg:row-start-4"
+  className="flex flex-col items-center justify-center p-8 lg:col-span-2 xl:col-span-4"
 >
   <CardHeader>
     <CardTitle
