--- a/src/components/FindMe.astro
+++ b/src/components/FindMe.astro
@@ -6,7 +6,7 @@ import { Button } from '@/components/ui/button'
 import { Icons } from '@/components/Icons'
 ---
 
-<Card className="flex h-full flex-col items-center p-8">
+<Card className="p-8">
   <CardHeader className="w-full">
     <CardTitle
       className="text-xl font-normal tracking-tight text-primary lg:text-8xl"
