--- a/src/components/Gallery.astro
+++ b/src/components/Gallery.astro
@@ -18,9 +18,7 @@ const imagePaths = Object.keys(images).filter((imagePath) => {
 })
 ---
 
-<Card
-  className="flex h-full flex-col justify-between p-2 md:grid md:grid-cols-2 md:items-center md:gap-12 lg:col-span-2 lg:col-start-2 lg:row-span-2 lg:row-start-2 lg:grid-cols-none lg:gap-0"
->
+<Card className="p-2 lg:col-span-2 xl:col-span-4">
   <CardHeader>
     <CardTitle className="font-medium tracking-tight text-primary md:text-6xl">
       Gallery
