--- a/src/components/LogoCard.astro
+++ b/src/components/LogoCard.astro
@@ -2,9 +2,7 @@
 import { Card, CardContent } from '@/components/ui/card'
 ---
 
-<Card
-  className="relative flex h-full flex-col items-center justify-center overflow-hidden p-8 lg:row-start-3"
->
+<Card className="flex flex-col items-center justify-center p-8 xl:col-span-2">
   <CardContent>
     <svg
       class="size-24 fill-black dark:fill-white lg:size-48 xl:size-64"
