--- a/src/components/Playing.astro
+++ b/src/components/Playing.astro
@@ -8,9 +8,7 @@ import {
 } from '@/components/ui/card'
 ---
 
-<Card
-  className="h-full items-center justify-between overflow-hidden p-2 text-center lg:text-left"
->
+<Card className="p-2 text-center lg:text-left">
   <CardHeader>
     <CardTitle className="text-xl tracking-tight text-primary lg:text-7xl">
       Playing
