--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -6,7 +6,7 @@ import { Card, CardContent, CardHeader, CardTitle } from '@/components/ui/card'
 import projects_image from '@/assets/projects-image.jpg'
 ---
 
-<Card className="overflow-hidden p-8 lg:row-span-2">
+<Card className="overflow-hidden p-8">
   <CardHeader>
     <CardTitle className="-mr-24">
       <Image
