--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,9 +4,7 @@ const currentYear = new Date().getFullYear()
 import { Card, CardFooter } from '@/components/ui/card'
 ---
 
-<Card
-  className="flex h-full flex-col justify-end p-8 lg:col-span-2 lg:row-span-2 xl:col-span-1"
->
+<Card className="justify-end p-8 lg:col-span-2 xl:col-span-4">
   <CardFooter className="mt-4 text-primary">
     &copy; {currentYear} Long Nhat Nguyen
   </CardFooter>
