--- a/src/components/Quotes.astro
+++ b/src/components/Quotes.astro
@@ -2,7 +2,7 @@
 import { Card, CardContent, CardHeader, CardTitle } from '@/components/ui/card'
 ---
 
-<Card className="flex h-full flex-col justify-between p-8 lg:row-start-4">
+<Card className="p-8 xl:col-span-2">
   <CardContent
     className="text-xl font-medium tracking-tight text-primary md:text-3xl"
   >
