--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ import Playing from '@/components/Playing.astro'
 import LogoCard from '@/components/LogoCard.astro'
 import Projects from '@/components/Projects.astro'
 import Contact from '@/components/Contact.astro'
-import Lyrics from '@/components/Lyrics.astro'
+import Quotes from '@/components/Quotes.astro'
 import Footer from '@/components/Footer.astro'
 
 import { siteConfig } from '@/config'
@@ -15,17 +15,15 @@ import { siteConfig } from '@/config'
 
 <BaseLayout title={siteConfig.name} description={siteConfig.description}>
   <main class="flex-auto p-4">
-    <div
-      class="grid grid-cols-1 gap-4 lg:grid-cols-3 lg:grid-rows-3 xl:grid-cols-4 xl:grid-rows-4"
-    >
+    <div class="grid grid-cols-1 gap-4 lg:grid-cols-2 xl:grid-cols-4">
       <About />
       <FindMe />
-      <Gallery />
       <Playing />
-      <LogoCard />
       <Projects />
+      <Gallery />
+      <LogoCard />
+      <Quotes />
       <Contact />
-      <Lyrics />
       <Footer />
     </div>
   </main>
