--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -1,9 +1,9 @@
 ---
-import { Image } from 'astro:assets'
+import { Image } from 'astro:assets';
 
-import { Card, CardContent, CardHeader } from '@/components/ui/card'
+import { Card, CardContent, CardHeader } from '@/components/ui/card';
 
-import Avatar from '@/assets/avatar.jpg'
+import Avatar from '@/assets/avatar.jpg';
 ---
 
 <Card className="p-8">
