--- a/src/components/Gallery.astro
+++ b/src/components/Gallery.astro
@@ -5,17 +5,17 @@ import {
   CardDescription,
   CardHeader,
   CardTitle,
-} from '@/components/ui/card'
+} from '@/components/ui/card';
 
-import type { ImageMetadata } from 'astro'
-import { Image } from 'astro:assets'
+import type { ImageMetadata } from 'astro';
+import { Image } from 'astro:assets';
 
 const images = import.meta.glob<{ default: ImageMetadata }>(
   '/src/assets/gallery/*',
-)
+);
 const imagePaths = Object.keys(images).filter((imagePath) => {
-  return imagePath.startsWith('/src/assets/gallery/')
-})
+  return imagePath.startsWith('/src/assets/gallery/');
+});
 ---
 
 <Card className="p-2 lg:col-span-2 xl:col-span-4">
@@ -30,14 +30,14 @@ const imagePaths = Object.keys(images).filter((imagePath) => {
   <CardContent className="columns-1 gap-4 md:columns-2">
     {
       imagePaths.map(async (imagePath) => {
-        const image = images[imagePath]()
+        const image = images[imagePath]();
         return (
           <Image
             class="mt-4 h-auto max-w-full rounded-lg"
             src={image}
             alt="Me"
           />
-        )
+        );
       })
     }
   </CardContent>
