--- a/src/components/LogoCard.astro
+++ b/src/components/LogoCard.astro
@@ -1,5 +1,5 @@
 ---
-import { Card, CardContent } from '@/components/ui/card'
+import { Card, CardContent } from '@/components/ui/card';
 ---
 
 <Card className="flex flex-col items-center justify-center p-8 xl:col-span-2">
