--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -1,9 +1,9 @@
 ---
-import { Image } from 'astro:assets'
+import { Image } from 'astro:assets';
 
-import { Card, CardContent, CardHeader, CardTitle } from '@/components/ui/card'
+import { Card, CardContent, CardHeader, CardTitle } from '@/components/ui/card';
 
-import projects_image from '@/assets/projects-image.jpg'
+import projects_image from '@/assets/projects-image.jpg';
 ---
 
 <Card className="overflow-hidden p-8">
