--- a/src/components/Quotes.astro
+++ b/src/components/Quotes.astro
@@ -1,5 +1,5 @@
 ---
-import { Card, CardContent, CardHeader, CardTitle } from '@/components/ui/card'
+import { Card, CardContent, CardHeader, CardTitle } from '@/components/ui/card';
 ---
 
 <Card className="p-8 xl:col-span-2">
