--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -1,11 +1,11 @@
 ---
-import { siteConfig } from '@/config'
+import { siteConfig } from '@/site.config';
 
-import { Mail } from 'lucide-react'
+import { Mail } from 'lucide-react';
 
-import { Button } from '@/components/ui/button'
+import { Button } from '@/components/ui/button';
 
-import { Card, CardContent, CardHeader, CardTitle } from '@/components/ui/card'
+import { Card, CardContent, CardHeader, CardTitle } from '@/components/ui/card';
 ---
 
 <Card
