--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,7 +1,7 @@
 ---
-const currentYear = new Date().getFullYear()
+const currentYear = new Date().getFullYear();
 
-import { Card, CardFooter } from '@/components/ui/card'
+import { Card, CardFooter } from '@/components/ui/card';
 ---
 
 <Card className="justify-end p-8 lg:col-span-2 xl:col-span-4">
