--- a/src/components/Playing.astro
+++ b/src/components/Playing.astro
@@ -5,7 +5,7 @@ import {
   CardDescription,
   CardHeader,
   CardTitle,
-} from '@/components/ui/card'
+} from '@/components/ui/card';
 ---
 
 <Card className="p-2 text-center lg:text-left">
