chore: update version and standardize quote style to double quotes

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,11 +1,11 @@
 ---
 const currentYear = new Date().getFullYear();
 
-import { Card, CardFooter } from '@/components/ui/card';
+import { Card, CardFooter } from "@/components/ui/card";
 ---
 
-<Card className="justify-end p-8 lg:col-span-2 xl:col-span-4">
-  <CardFooter className="mt-4 text-primary">
+<Card className='justify-end p-8 lg:col-span-2 xl:col-span-4'>
+  <CardFooter className='mt-4 text-primary'>
     &copy; {currentYear} Long Nhat Nguyen
   </CardFooter>
 </Card>
