--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,7 +1,7 @@
 ---
-import HeadSEO from '@/components/HeadSEO.astro';
-import Header from '@/components/Header.astro';
-import ThemeProvider from '@/components/ThemeProvider.astro';
+import HeadSEO from "@/components/HeadSEO.astro";
+import Header from "@/components/Header.astro";
+import ThemeProvider from "@/components/ThemeProvider.astro";
 
 interface Props {
   title?: string | undefined;
