--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,16 @@
 ---
-import BaseLayout from '@/layouts/BaseLayout.astro';
-import About from '@/components/About.astro';
-import FindMe from '@/components/FindMe.astro';
-import Gallery from '@/components/Gallery.astro';
-import Playing from '@/components/Playing.astro';
-import LogoCard from '@/components/LogoCard.astro';
-import Projects from '@/components/Projects.astro';
-import Contact from '@/components/Contact.astro';
-import Quotes from '@/components/Quotes.astro';
-import Footer from '@/components/Footer.astro';
+import BaseLayout from "@/layouts/BaseLayout.astro";
+import About from "@/components/About.astro";
+import FindMe from "@/components/FindMe.astro";
+import Gallery from "@/components/Gallery.astro";
+import Playing from "@/components/Playing.astro";
+import LogoCard from "@/components/LogoCard.astro";
+import Projects from "@/components/Projects.astro";
+import Contact from "@/components/Contact.astro";
+import Quotes from "@/components/Quotes.astro";
+import Footer from "@/components/Footer.astro";
 
-import { siteConfig } from '@/site.config';
+import { siteConfig } from "@/site.config";
 ---
 
 <BaseLayout title={siteConfig.name} description={siteConfig.description}>
