--- a/src/components/Gallery.astro
+++ b/src/components/Gallery.astro
@@ -5,37 +5,37 @@ import {
   CardDescription,
   CardHeader,
   CardTitle,
-} from '@/components/ui/card';
+} from "@/components/ui/card";
 
-import type { ImageMetadata } from 'astro';
-import { Image } from 'astro:assets';
+import type { ImageMetadata } from "astro";
+import { Image } from "astro:assets";
 
 const images = import.meta.glob<{ default: ImageMetadata }>(
-  '/src/assets/gallery/*',
+  "/src/assets/gallery/*",
 );
 const imagePaths = Object.keys(images).filter((imagePath) => {
-  return imagePath.startsWith('/src/assets/gallery/');
+  return imagePath.startsWith("/src/assets/gallery/");
 });
 ---
 
-<Card className="p-2 lg:col-span-2 xl:col-span-4">
+<Card className='p-2 lg:col-span-2 xl:col-span-4'>
   <CardHeader>
-    <CardTitle className="font-medium tracking-tight text-primary md:text-6xl">
+    <CardTitle className='font-medium tracking-tight text-primary md:text-6xl'>
       Gallery
     </CardTitle>
-    <CardDescription className="mt-4 text-sm">
+    <CardDescription className='mt-4 text-sm'>
       One day, you'll leave this world behind so live a life you will remember.
     </CardDescription>
   </CardHeader>
-  <CardContent className="columns-1 gap-4 md:columns-2">
+  <CardContent className='columns-1 gap-4 md:columns-2'>
     {
       imagePaths.map(async (imagePath) => {
         const image = images[imagePath]();
         return (
           <Image
-            class="mt-4 h-auto max-w-full rounded-lg"
+            class='mt-4 h-auto max-w-full rounded-lg'
             src={image}
-            alt="Me"
+            alt='Me'
           />
         );
       })
