--- a/src/components/HeadSEO.astro
+++ b/src/components/HeadSEO.astro
@@ -1,6 +1,6 @@
 ---
-import '@/styles/globals.css';
-import '@/styles/fonts.css';
+import "@/styles/global.css";
+import "@/styles/fonts.css";
 
 interface Props {
   title?: string | undefined;
@@ -17,49 +17,49 @@ if (Astro.props.ogImage === undefined) {
 const { title, description, ogImage } = Astro.props;
 ---
 
-<meta charset="utf-8" />
-<meta name="robots" content="index, follow" />
-<meta name="googlebot" content="index, follow" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<meta name="generator" content={Astro.generator} />
-<link rel="canonical" href={canonicalURL} />
+<meta charset='utf-8' />
+<meta name='robots' content='index, follow' />
+<meta name='googlebot' content='index, follow' />
+<meta name='viewport' content='width=device-width, initial-scale=1' />
+<meta name='generator' content={Astro.generator} />
+<link rel='canonical' href={canonicalURL} />
 <link
-  rel="shortcut icon"
-  type="image/svg+xml"
+  rel='shortcut icon'
+  type='image/svg+xml'
   href={`${Astro.site}favicon.svg`}
 />
 <link
-  rel="sitemap"
-  type="application/xml"
+  rel='sitemap'
+  type='application/xml'
   href={`${Astro.site}sitemap-index.xml`}
 />
 <title>{title}</title>
-<meta name="title" content={title} />
-<meta name="description" content={description} />
+<meta name='title' content={title} />
+<meta name='description' content={description} />
 
-<meta property="og:type" content="website" />
-<meta property="og:url" content={canonicalURL} />
-<meta property="og:title" content={title} />
-<meta property="og:description" content={description} />
-<meta property="og:image" content={ogImage} />
+<meta property='og:type' content='website' />
+<meta property='og:url' content={canonicalURL} />
+<meta property='og:title' content={title} />
+<meta property='og:description' content={description} />
+<meta property='og:image' content={ogImage} />
 
-<meta property="twitter:card" content="summary_large_image" />
-<meta property="twitter:url" content={canonicalURL} />
-<meta property="twitter:title" content={title} />
-<meta property="twitter:description" content={description} />
-<meta property="twitter:image" content={ogImage} />
+<meta property='twitter:card' content='summary_large_image' />
+<meta property='twitter:url' content={canonicalURL} />
+<meta property='twitter:title' content={title} />
+<meta property='twitter:description' content={description} />
+<meta property='twitter:image' content={ogImage} />
 
 <link
-  rel="preload"
+  rel='preload'
   href={`${Astro.site}fonts/Mona-Sans.woff2`}
-  as="font"
-  type="font/woff2"
+  as='font'
+  type='font/woff2'
   crossorigin
 />
 <link
-  rel="preload"
+  rel='preload'
   href={`${Astro.site}fonts/Hubot-Sans.woff2`}
-  as="font"
-  type="font/woff2"
+  as='font'
+  type='font/woff2'
   crossorigin
 />
