--- a/src/components/Playing.astro
+++ b/src/components/Playing.astro
@@ -5,27 +5,27 @@ import {
   CardDescription,
   CardHeader,
   CardTitle,
-} from '@/components/ui/card';
+} from "@/components/ui/card";
 ---
 
-<Card className="p-2 text-center lg:text-left">
+<Card className='p-2 text-center lg:text-left'>
   <CardHeader>
-    <CardTitle className="text-xl tracking-tight text-primary lg:text-7xl">
+    <CardTitle className='text-xl tracking-tight text-primary lg:text-7xl'>
       Playing
     </CardTitle>
-    <CardDescription className="mt-4 text-sm">
+    <CardDescription className='mt-4 text-sm'>
       I'm only human but I could feel like, this could be real love!
     </CardDescription>
   </CardHeader>
   <CardContent>
     <iframe
-      title="Spotify"
-      class="h-96 rounded-xl sm:h-lvh"
-      src="https://open.spotify.com/embed/playlist/5hZEhopBE0tW3gL6yFBeGr?utm_source=generator"
-      width="100%"
-      allowfullscreen=""
-      allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
-      loading="lazy"
+      title='Spotify'
+      class='h-96 rounded-xl sm:h-lvh'
+      src='https://open.spotify.com/embed/playlist/5hZEhopBE0tW3gL6yFBeGr?utm_source=generator'
+      width='100%'
+      allowfullscreen=''
+      allow='autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture'
+      loading='lazy'
     >
     </iframe>
   </CardContent>
