--- a/src/components/Quotes.astro
+++ b/src/components/Quotes.astro
@@ -1,10 +1,10 @@
 ---
-import { Card, CardContent, CardHeader, CardTitle } from '@/components/ui/card';
+import { Card, CardContent, CardHeader, CardTitle } from "@/components/ui/card";
 ---
 
-<Card className="p-8 xl:col-span-2">
+<Card className='p-8 xl:col-span-2'>
   <CardContent
-    className="text-xl font-medium tracking-tight text-primary md:text-3xl"
+    className='text-xl font-medium tracking-tight text-primary md:text-3xl'
   >
     If we'll ever be remembered I hope it'll be for the way that we love.
     <br />
