--- a/src/components/FindMe.astro
+++ b/src/components/FindMe.astro
@@ -24,8 +24,8 @@ import { Icons } from "@/components/Icons";
         rel='noopener noreferrer'
         href={siteConfig.links.github}
       >
-        <Button variant='ghost' size='icon' className='size-12 p-0'>
-          <Icons.github className='size-6' />
+        <Button variant='ghost' size='icon'>
+          <Icons.github />
           <span class='sr-only'>GitHub</span>
         </Button>
       </a>
@@ -35,8 +35,8 @@ import { Icons } from "@/components/Icons";
         rel='noopener noreferrer'
         href={siteConfig.links.youtube}
       >
-        <Button variant='ghost' size='icon' className='size-12 p-0'>
-          <Icons.youtube className='size-6' />
+        <Button variant='ghost' size='icon'>
+          <Icons.youtube />
           <span class='sr-only'>YouTube</span>
         </Button>
       </a>
@@ -46,8 +46,8 @@ import { Icons } from "@/components/Icons";
         rel='noopener noreferrer'
         href={siteConfig.links.facebook}
       >
-        <Button variant='ghost' size='icon' className='size-12 p-0'>
-          <Icons.facebook className='size-6' />
+        <Button variant='ghost' size='icon'>
+          <Icons.facebook />
           <span class='sr-only'>Facebook</span>
         </Button>
       </a>
@@ -57,8 +57,8 @@ import { Icons } from "@/components/Icons";
         rel='noopener noreferrer'
         href={siteConfig.links.instagram}
       >
-        <Button variant='ghost' size='icon' className='size-12 p-0'>
-          <Icons.instagram className='size-6' />
+        <Button variant='ghost' size='icon'>
+          <Icons.instagram />
           <span class='sr-only'>Instagram</span>
         </Button>
       </a>
@@ -68,8 +68,8 @@ import { Icons } from "@/components/Icons";
         rel='noopener noreferrer'
         href={siteConfig.links.X}
       >
-        <Button variant='ghost' size='icon' className='size-12 p-0'>
-          <Icons.X className='size-6' />
+        <Button variant='ghost' size='icon'>
+          <Icons.X />
           <span class='sr-only'>X</span>
         </Button>
       </a>
@@ -79,8 +79,8 @@ import { Icons } from "@/components/Icons";
         rel='noopener noreferrer'
         href={siteConfig.links.linkedin}
       >
-        <Button variant='ghost' size='icon' className='size-12 p-0'>
-          <Icons.linkedin className='size-6' />
+        <Button variant='ghost' size='icon'>
+          <Icons.linkedin />
           <span class='sr-only'>LinkedIn</span>
         </Button>
       </a>
@@ -90,8 +90,8 @@ import { Icons } from "@/components/Icons";
         rel='noopener noreferrer'
         href={siteConfig.links.reddit}
       >
-        <Button variant='ghost' size='icon' className='size-12 p-0'>
-          <Icons.reddit className='size-6' />
+        <Button variant='ghost' size='icon'>
+          <Icons.reddit />
           <span class='sr-only'>Reddit</span>
         </Button>
       </a>
@@ -101,8 +101,8 @@ import { Icons } from "@/components/Icons";
         rel='noopener noreferrer'
         href={siteConfig.links.pinterest}
       >
-        <Button variant='ghost' size='icon' className='size-12 p-0'>
-          <Icons.pinterest className='size-6' />
+        <Button variant='ghost' size='icon'>
+          <Icons.pinterest />
           <span class='sr-only'>Pinterest</span>
         </Button>
       </a>
@@ -112,8 +112,8 @@ import { Icons } from "@/components/Icons";
         rel='noopener noreferrer'
         href={siteConfig.links.soundcloud}
       >
-        <Button variant='ghost' size='icon' className='size-12 p-0'>
-          <Icons.soundcloud className='size-6' />
+        <Button variant='ghost' size='icon'>
+          <Icons.soundcloud />
           <span class='sr-only'>SoundCloud</span>
         </Button>
       </a>
@@ -123,8 +123,8 @@ import { Icons } from "@/components/Icons";
         rel='noopener noreferrer'
         href={siteConfig.links.mastodon}
       >
-        <Button variant='ghost' size='icon' className='size-12 p-0'>
-          <Icons.mastodon className='size-6' />
+        <Button variant='ghost' size='icon'>
+          <Icons.mastodon />
           <span class='sr-only'>Mastodon</span>
         </Button>
       </a>
