--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -147,4 +147,8 @@
   body {
     @apply bg-background text-foreground;
   }
+  button:not(:disabled),
+  [role="button"]:not(:disabled) {
+    cursor: pointer;
+  }
 }
