--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,9 +1,9 @@
 ---
-import { ThemeToggle } from "@/components/ThemeToggle";
+import ThemeToggle from "@/components/ThemeToggle.astro";
 ---
 
-<header class='sticky top-0 z-50 h-16 pt-6'>
-  <div class='grid grid-cols-1 justify-items-end px-4'>
-    <ThemeToggle client:load />
+<header class="sticky top-0 z-50 h-16 pt-6">
+  <div class="grid grid-cols-1 justify-items-end px-4">
+    <ThemeToggle />
   </div>
 </header>
