--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,7 @@ import BaseLayout from "@/layouts/BaseLayout.astro";
 import About from "@/components/About.astro";
 import FindMe from "@/components/FindMe.astro";
 import Gallery from "@/components/Gallery.astro";
-import Playing from "@/components/Playing.astro";
+import TimeZone from "@/components/TimeZone.astro";
 import LogoCard from "@/components/LogoCard.astro";
 import Projects from "@/components/Projects.astro";
 import Contact from "@/components/Contact.astro";
@@ -18,7 +18,7 @@ import { siteConfig } from "@/site.config";
     <div class="grid grid-cols-1 gap-4 lg:grid-cols-2 xl:grid-cols-4">
       <About />
       <FindMe />
-      <Playing />
+      <TimeZone />
       <Projects />
       <Gallery />
       <LogoCard />
