--- a/src/components/TimeZone.astro
+++ b/src/components/TimeZone.astro
@@ -14,7 +14,7 @@ import {
       Time Zone
     </CardTitle>
     <CardDescription className="mt-4 text-sm lg:text-xl">
-      Hello from the other side of the world!
+      How about now.
     </CardDescription>
   </CardHeader>
   <CardContent>
