--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -8,25 +8,23 @@ import { Button } from "@/components/ui/button";
 import { Card, CardContent, CardHeader, CardTitle } from "@/components/ui/card";
 ---
 
-<Card
-  className='flex flex-col items-center justify-center p-8 lg:col-span-2 xl:col-span-4'
->
+<Card className="p-8 lg:col-span-2 xl:col-span-4">
   <CardHeader>
     <CardTitle
-      className='text-center text-xl font-medium tracking-tight text-primary md:text-6xl'
+      className="text-center text-xl font-medium tracking-tight text-primary md:text-6xl"
     >
-      Send me <span class='lg:block'>a letter</span>
+      Send me <span class="lg:block">a letter</span>
     </CardTitle>
   </CardHeader>
-  <CardContent>
+  <CardContent className="flex flex-col items-center justify-center space-y-4">
     <a
       aria-label="Nhat Nguyen's Gmail"
-      target='_blank'
-      rel='noopener noreferrer'
+      target="_blank"
+      rel="noopener noreferrer"
       href={`mailto:${siteConfig.links.email}`}
     >
       <Button>
-        <Mail className='mr-2 size-4' />Email
+        <Mail className="mr-2 size-4" />Email
       </Button>
     </a>
   </CardContent>
