--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,8 +4,8 @@ const currentYear = new Date().getFullYear();
 import { Card, CardFooter } from "@/components/ui/card";
 ---
 
-<Card className='justify-end p-8 lg:col-span-2 xl:col-span-4'>
-  <CardFooter className='mt-4 text-primary'>
+<Card className="justify-end p-8 lg:col-span-2 xl:col-span-4">
+  <CardFooter className="text-primary">
     &copy; {currentYear} Long Nhat Nguyen
   </CardFooter>
 </Card>
